--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/pruebajava
+spring.datasource.username=postgres
+spring.datasource.password=coriajorge
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
