--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/de.mkammerer/argon2-jvm -->
+		<dependency>
+			<groupId>de.mkammerer</groupId>
+			<artifactId>argon2-jvm</artifactId>
+			<version>2.11</version>
+		</dependency>
+
 
 	</dependencies>
 
