--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=coriajorge
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+security.jwt.secret=palabraqueusaparaencriptartodo
+#Indica quien fue el servicio que inicio sesion, usado en microservicio
+security.jwt.issuer=Main
+#timepo de caducidad hours*360000
+security.jwt.ttlMillis=345600000
